# deep_learning

./: CMakeLists.txt  main.cpp
data/: preprocess.h
src/: Matrix.h
src/ActiveFunc/: ActiveFun.h
src/Layer/: DenseLayer.h
src/Loss/: Loss.h
src/Optimization/: Optimization.h
